@@ -399,6 +399,7 @@
   <string name="eng_dictionary">Ingelesa</string>
   <string name="simley_key_name">Aurpegieren tekla</string>
   <string name="short_smiley_key_name">Aurpegieren tekla laburragoa</string>
+  <string name="quick_text_kaomoji">Kaomoji</string>
   <string name="history_quick_text_key_name">Historiala</string>
   <string name="default_quick_text_key_name">Emotikono sinpleak</string>
   <string name="unicode_quick_text_key_name">Emotikonoak</string>
