@@ -16,9 +16,10 @@
   <!-- credits tab -->
   <!-- notifications -->
   <string name="ime_name_beta">AnySoftKeyboard BETA</string>
-  <string name="notification_text_testers">Dette er en beta versjon.  Den er ikke feilfri!</string>
+  <string name="notification_text_testers">Dette er en beta-versjon. Bruk med forsiktighet!</string>
   <string name="testers_version">Testversjon!</string>
   <!-- Language root menu -->
+  <string name="language_root_tile">Språk</string>
   <!-- UI root menu -->
   <!-- welcome -->
   <!-- changelog -->
@@ -27,25 +28,25 @@
   <string name="search_market_for_keyboard_addons">Finn flere tastaturer i <i>Play Store</i>…</string>
   <string name="search_market_for_quick_key_addons">Finn flere <i>Quick-Text</i> utvidelser i <i>Play Store</i>…</string>
   <string name="no_market_store_available"><b>* Kunne ikke finne Google Play Store på din enhet. Det er ikke mulig å legge inn utvidelser.</b></string>
-  <string name="keyboard_theme_tweak_group">Tilpassninger</string>
+  <string name="keyboard_theme_tweak_group">Tilpasninger</string>
   <string name="close_button">Lukk</string>
   <!-- Indicates that a word has been added to the dictionary -->
   <string name="added_word">Lagret::\u0020<xliff:g id="word">%s</xliff:g>
     </string>
-  <string name="revert_added_word_question">Slette\?</string>
-  <string name="removed_word">Slettet:\u0020<xliff:g id="word">%s</xliff:g>
+  <string name="revert_added_word_question">Fjerne\?</string>
+  <string name="removed_word">Fjernet:\u0020<xliff:g id="word">%s</xliff:g>
     </string>
   <string name="hint_add_to_dictionary">\u2190 Berør en gang til for å lagre</string>
-  <string name="hint_double_tap_to_close">En gang til for å fjerne forslaget</string>
+  <string name="hint_double_tap_to_close">En gang til for å fjerne forslag</string>
   <!-- voice -->
-  <string name="voice_input_not_installed_title">Stemmekontrollert skriving er ikke installert</string>
+  <string name="voice_input_not_installed_title">Tale-inndata er ikke installert</string>
   <string name="voice_input_not_installed_text">Det er nødvendig å innstallere Googles Voice Input fra Play Store
         før du tar i bruk denne funksjonen.
     </string>
   <string name="voice_input_not_installed_action_install">Innstaller</string>
   <string name="voice_input_not_installed_action_do_not_install">Nei</string>
-  <string name="voice_input_not_voice_pack_in_market">Kan ikke finne stemmestyrt skriving (com.google.android.voicesearch) i
-        Play Store. Beklager, stemmestyring vil ikke fungere på din enhet.
+  <string name="voice_input_not_voice_pack_in_market">Kan ikke finne tale-inndata (com.google.android.voicesearch) i
+        Play Store. Beklager, tale-inndata vil ikke fungere på din enhet.
     </string>
   <!-- Options menu -->
   <string name="change_ime">Endre inntastningsmetode</string>
@@ -60,7 +61,7 @@
   <string name="effects_group">Effekter</string>
   <string name="ime_settings">Tastaturinnstillinger</string>
   <!-- <string name="vibrate_on">Vibrate on key-press</string>-->
-  <string name="vibrate_on_key_press_title">Vibrere ved tastetrykk</string>
+  <string name="vibrate_on_key_press_title">Vibrer ved tastetrykk</string>
   <string name="vibrate_on_key_press_summary">Vibrasjonsnivå for tastetrykk. For øyeblikket: %s</string>
   <string name="vibrate_on_key_press_dialog_title">Velg vibrasjonstype</string>
   <string-array name="vibrate_on_key_press_types">
@@ -75,14 +76,14 @@
   <string name="use_custom_sound_volume_on_summary">Egendefinert volum på lydeffeker.</string>
   <string name="use_custom_sound_volume_off_summary">Lydeffektvolum er satt til systemets varslingsnivå.
     </string>
-  <string name="custom_sound_volume">Egendefinert tastetrykk volum</string>
-  <string name="switch_keyboard_on_space">Mellomromstasten bytter tastaturoppsett</string>
+  <string name="custom_sound_volume">Egendefinert tastetrykkvolum</string>
+  <string name="switch_keyboard_on_space">Mellomromstasten bytter tastaturer</string>
   <string name="switch_keyboard_on_space_on_summary">Bytt fra symboler/tall til alfabet ved trykk på mellomromstasten
     </string>
   <string name="switch_keyboard_on_space_off_summary">Ikke bytt fra symboler/tall til alfabet ved trykk på
         mellomromstasten
     </string>
-  <string name="persistent_layout_per_package_id_title">Husk alfabetoppsett pr app</string>
+  <string name="persistent_layout_per_package_id_title">Husk alfabetoppsett pr. app</string>
   <string name="persistent_layout_per_package_id_off_summary">Bruk samme oppsett for alle apper.</string>
   <string name="persistent_layout_per_package_id_on_summary">Skift automatisk til forrige oppsett brukt i appen.</string>
   <string name="one_shot_quick_text_popup">Lukk automatisk etter tastetrykk</string>
@@ -96,9 +97,9 @@
   <string name="fullscreen_input_connection_supported_off_summary">Ikke bruk fullskjerm-tastatur i landskapsmodus</string>
   <string name="fullscreen_portrait_input_connection_supported">Bruk fullskjerm i portrettmodus</string>
   <string name="fullscreen_portrait_input_connection_supported_off_summary">Ikke bruk fullskjerm-tastatur i portrettmodus    </string>
-  <string name="swipe_up_action">Swipe oppover</string>
+  <string name="swipe_up_action">Sveip opp</string>
   <string name="swipe_up_action_summary">Definer swipe operasjon. Nå: %s</string>
-  <string name="swipe_up_action_title">Velg swipe operasjon</string>
+  <string name="swipe_up_action_title">Velg sveip opp-handling</string>
   <string name="swipe_down_action">Sveip ned</string>
   <string name="swipe_left_action">Sveip til venstre</string>
   <string name="swipe_left_action_title">Velg handling ved sveip til venstre</string>
@@ -119,6 +120,7 @@
   <string name="swipe_action_name_merge_layout">Flette oppsett</string>
   <string name="more_ui_settings_group">Brukergrensesnitt</string>
   <string name="special_dictionaries_group">Spesielle ordbøker</string>
+  <string name="tweaks_group">Tilpasninger</string>
   <string-array name="custom_hint_align_types">
     <item>Venstre</item>
     <item>Senter</item>
@@ -128,16 +130,35 @@
     <item>Topp</item>
     <item>Bunn</item>
   </string-array>
+  <string name="show_keyboard_icon_in_status_bar_title">Vis tastaturikon på statuslinjen</string>
+  <string name="show_keyboard_icon_in_status_bar_off_summary">Ingen statuslinjeikon.</string>
+  <string name="tweak_animations_level_title">Animasjoner</string>
+  <string name="tweak_animations_level_summary">Hvor mange animasjoner skal brukes. Gjeldende: %s    </string>
+  <string name="tweak_animations_level_types_full">Alle</string>
+  <string name="tweak_animations_level_types_some">Noen</string>
+  <string name="tweak_animations_level_types_none">Ingen</string>
+  <string name="keyboard_behavior_group">Tastaturvirkemåte</string>
+  <string name="candidates_on">Vis forslag</string>
   <!-- settings - keyboard group -->
+  <string name="keyboards_group">Tastaturer</string>
+  <string name="eng_keyboard">Engelsk</string>
   <!-- settings - quick text keys -->
+  <string name="quick_text_keys_group">Hurtigteksttaster</string>
+  <string name="quick_text_keys_order">Hurtigtekstgrupper og rekkefølge</string>
   <!-- settings - top generic row -->
   <!-- settings - bottom generic row -->
   <string name="bottom_generic_row_summary">Valgt bunnrad: %s</string>
+  <string name="keyboard_theme_list_title">Velg tema</string>
   <!-- extension keyboard type -->
   <!-- Tutorials -->
   <!-- Special soft keyboard keys text -->
+  <string name="select_keyboard_popup_title">Velg tastatur</string>
   <!-- dictionaries -->
+  <string name="settings_force_locale_title">Framtving språk</string>
+  <string name="settings_force_locale_summary">Framtving språk brukt i AnySoftKeyboard (tar en stund for å tre i kraft). Gjeldende: %s.
+    </string>
   <!-- User dictionary settings -->
+  <string name="user_dictionary_select_locale">Språk:</string>
   <!-- User dictionary settings, The titlebar text of the User dictionary settings screen. -->
   <!-- abbreviations editor -->
   <!-- User dictionary settings. The title of the dialog to add a new word to the user dictionary. -->
@@ -145,4 +166,13 @@
   <!-- User dictionary settings. The text to show when there are no user-defined words in the dictionary -->
   <!--  Strings for possible PreferenceActivity Back/Next buttons -->
   <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
+  <string name="setup_wizard_step_one_title">Aktiver AnySoftKeyboard</string>
+  <string name="setup_wizard_step_two_title">Bytt til AnySoftKeyboard</string>
+  <string name="setup_wizard_step_two_action">Bytt aktive tastaturer</string>
+  <string name="setup_wizard_step_three_action_themes">Velg tema…</string>
+  <string name="app_shortcut_keyboards_short_label">Tastaturer</string>
+  <string name="app_shortcut_themes_short_label">Temaer</string>
+  <string name="app_shortcut_gestures_short_label">Bevegelser</string>
+  <string name="theme_case_type_override_lower">Alltid små bokstaver</string>
+  <string name="theme_case_type_override_upper">Alltid store bokstaver</string>
 </resources>
